# rmx-sx-wlan-gateway-esp32

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Todo.md  platformio.ini  pyproject.toml  requirements.txt
config/: gateway.example.yaml
docs/: architecture-decisions.md  sx-reference-analysis.md
esp32/: .gitignore  CHANGELOG.md  build.sh  platformio.ini  secrets.env.example
esp32/src/: comm.cpp  config.h  gui.cpp  gui.h
scripts/: configure_ap.sh  diagnose.sh  install.sh  list_interfaces.sh  status.sh  uninstall.sh
src/: comm.cpp  comm.h  config.h  encoder.cpp  encoder.h  gui.cpp  gui.h  locomotives.cpp  locomotives.h  logic.cpp  logic.h  main.cpp  main.cpp.orig  sdcard.cpp  sdcard.h  touch.cpp  touch.h  types.h
src/rmx_sx_gateway/: __init__.py  client_manager.py  config.py  interface_manager.py  logging_config.py  main.py  models.py  protocol.py  state.py  websocket_server.py
src/rmx_sx_gateway/drivers/: __init__.py  base.py  simulator.py  sx825.py
systemd/: rmx-sx-gateway.service
tests/: conftest.py  test_config.py  test_protocol.py  test_safety.py  test_simulator.py  test_state.py  test_websocket.py
tools/: protocol_decoder.py  send_test_frame.py  serial_sniffer.py  websocket_test_client.py
