[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rmx-sx-wlan-gateway"
version = "0.1.0"
description = "WLAN gateway connecting ESP32 touch throttles to RMX/SX model railway interfaces"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
]

[project.optional-dependencies]
journald = ["systemd-python>=235"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
rmx-sx-gateway = "rmx_sx_gateway.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
